@@ -1017,6 +1017,9 @@
 <b>3.2.x</b><br>
 1) toolchain: update gcc to 20150614 4.8.5-RC version form git, update headers.<br>
 2) dnsmasq: up to 2.73 version.<br>
+3) kernel: ralink wifi: 7610: fix clean NDP announces.<br>
+4) kernel: ralink wifi: 7610: do not agregate low rate pkts.<br>
+4) 
 <br>
 <br>
 <b>TODO:</b><br>
